[gd_scene load_steps=18 format=2]

[ext_resource path="res://popochiu/Common/Overlay2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Hidden/Levels/Level.tscn" type="PackedScene" id=2]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Hidden/Hidden.gd" type="Script" id=3]
[ext_resource path="res://addons/ppc/ppcamera.gd" type="Script" id=5]
[ext_resource path="res://popochiu/GraphicInterface/Resources/DynamicFonts/MonkeyIsland-12.tres" type="DynamicFont" id=6]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Hidden/HiddenGI.gd" type="Script" id=7]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Hidden/GI/sprites/click_meter_under.png" type="Texture" id=8]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Hidden/GI/sprites/click_meter_progress.png" type="Texture" id=9]
[ext_resource path="res://popochiu/GraphicInterface/Popups/Hidden/GI/sprites/tooltip.png" type="Texture" id=10]
[ext_resource path="res://popochiu/GraphicInterface/Resources/DynamicFonts/MonkeyIsland-8.tres" type="DynamicFont" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 0, 0, 0, 0 )
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=6]
content_margin_bottom = 2.0
draw_center = false
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 8.0
content_margin_right = 8.0
content_margin_bottom = 2.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxTexture" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 5.0
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 69, 24 )
margin_left = 1.0
margin_right = 1.0
margin_top = 1.0
margin_bottom = 4.0

[node name="Hidden" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ViewportContainer" type="ViewportContainer" parent="." index="1"]
margin_left = -131.0
margin_top = -60.0
margin_right = 131.0
margin_bottom = 60.0

[node name="Viewport" type="Viewport" parent="ViewportContainer" index="0"]
size = Vector2( 262, 120 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="FakePointer" type="Area2D" parent="ViewportContainer/Viewport" index="0"]
position = Vector2( 64, 64 )
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewportContainer/Viewport/FakePointer" index="0"]
shape = SubResource( 1 )

[node name="Level" parent="ViewportContainer/Viewport" index="1" instance=ExtResource( 2 )]

[node name="PinchPanCamera" type="Position2D" parent="ViewportContainer/Viewport" index="2"]
script = ExtResource( 5 )

[node name="GI" type="Control" parent="." index="2"]
margin_left = -131.0
margin_top = -60.0
margin_right = 131.0
margin_bottom = 60.0
mouse_filter = 2
script = ExtResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="GI" index="0"]

[node name="GoalsPanel" type="PanelContainer" parent="GI" index="1"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -26.0
margin_right = -2.0
margin_bottom = -2.0
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="GI/GoalsPanel" index="0"]
margin_left = 4.0
margin_top = 2.0
margin_right = 254.0
margin_bottom = 22.0
size_flags_horizontal = 5
custom_constants/separation = 2
alignment = 1

[node name="ClickMeter" type="TextureProgress" parent="GI/GoalsPanel/HBoxContainer" index="0"]
margin_right = 4.0
margin_bottom = 20.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
texture_progress_offset = Vector2( 1, 1 )
fill_mode = 3

[node name="Container" type="MarginContainer" parent="GI/GoalsPanel/HBoxContainer" index="1"]
margin_left = 6.0
margin_right = 250.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="GoalsContainer" type="HBoxContainer" parent="GI/GoalsPanel/HBoxContainer/Container" index="0"]
margin_left = 122.0
margin_right = 122.0
margin_bottom = 20.0
size_flags_horizontal = 4
alignment = 1

[node name="Details" type="Control" parent="GI" index="2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DetailsPanel" type="PanelContainer" parent="GI/Details" index="0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -56.0
margin_right = 78.0
margin_bottom = 31.0
grow_horizontal = 2
custom_styles/panel = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="GI/Details/DetailsPanel" index="0"]
margin_left = 4.0
margin_top = 4.0
margin_right = 152.0
margin_bottom = 83.0

[node name="HBoxContainer" type="HBoxContainer" parent="GI/Details/DetailsPanel/VBoxContainer" index="0"]
margin_right = 148.0
margin_bottom = 65.0
size_flags_vertical = 3

[node name="Icon" type="TextureRect" parent="GI/Details/DetailsPanel/VBoxContainer/HBoxContainer" index="0"]
margin_right = 72.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="GI/Details/DetailsPanel/VBoxContainer/HBoxContainer" index="1"]
margin_left = 76.0
margin_top = 23.0
margin_right = 148.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Name" type="Label" parent="GI/Details/DetailsPanel/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
margin_right = 72.0
margin_bottom = 10.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 6 )
align = 1
valign = 1
autowrap = true

[node name="Clue" type="Label" parent="GI/Details/DetailsPanel/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
margin_top = 14.0
margin_right = 72.0
margin_bottom = 19.0
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1
autowrap = true

[node name="Secret" type="Label" parent="GI/Details/DetailsPanel/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
visible = false
margin_top = 31.0
margin_right = 72.0
margin_bottom = 60.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.482353, 0.482353, 0.482353, 1 )
custom_fonts/font = ExtResource( 11 )
align = 1
valign = 1
autowrap = true

[node name="BtnClose" type="Button" parent="GI/Details/DetailsPanel/VBoxContainer" index="1"]
margin_left = 54.0
margin_top = 69.0
margin_right = 94.0
margin_bottom = 79.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 6 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
text = "close"

[node name="Tooltip" type="Label" parent="GI" index="3"]
visible = false
margin_left = 97.0
margin_top = 74.0
margin_right = 166.0
margin_bottom = 98.0
grow_vertical = 0
rect_min_size = Vector2( 69, 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 3 )
autowrap = true
